correctifs taille carousel collapse et card version mobile

--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -43,7 +43,7 @@
     }
   }
 
-  @media screen and (max-width: 570px) {
+  @media screen and (max-width: 768px) {
     .banner {
       height: 110px;
       .banner-image{
