--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -8,7 +8,7 @@
   border-radius: 10px;
   transition: transform 0.5s; 
     &:hover {
-      transform: scale(1.05);  
+      transform: scale(1.02);  
     }
 
     img {
@@ -30,4 +30,14 @@
       z-index: 1;
         
     }
+}
+
+@media screen and (max-width: 768px) {
+  .card-logement{
+    width: 98.5%;
+    height: 255px;
+      &:hover {
+        transform: scale(1.02);  
+      }
+  }
 }
