--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -23,7 +23,7 @@
   
   }
   
-  @media screen and (max-width: 950px) {
+  @media screen and (max-width: 768px) {
     .footer {
       margin-top: 27px;
 
