--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -51,7 +51,7 @@
 
 
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 768px) {
 .header {
   height: 48px;
     img {
