--- a/kasa/src/pages/Acceuil/Acceuil.scss
+++ b/kasa/src/pages/Acceuil/Acceuil.scss
@@ -24,6 +24,8 @@
         gap: 40px 30px;
 
             a {
+                display: flex;
+                justify-content: center;
                 width: 31%;
             }
     }
@@ -51,7 +53,7 @@
         width: 100%;
         height: auto;
         background-color: $background-color-white;
-        padding: 0px;
+        padding:10px 2px;
         gap: 20px;
         
             a{
